tests/neg/effect-order.stk
fun traceDouble(x: Int): Int = x p x x +  // error

5 traceDouble 6 p   // error

1 (5 p) 2 + // error
